<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rba.sdkdemo.login.LoginActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_login">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/email"
            android:text="ricardo@test.pe"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/password"
            android:imeOptions="actionGo"
            android:text="123456"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/enter" />



    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/lblRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/RegisterTextview"
        android:text="@string/register_message"/>


</LinearLayout>
